tests/fail/functionDoesNotExist.llcl
/*
error: value not in scope
9  |fn main(): Int8 {
10 |    notAFunction();
        ^^^^^^^^^^^^ nothing named 'notAFunction'
11 |
*/

fn main(): Int8 {
	notAFunction();

	return 0;
}